add waypoint using longpress gesture working

--- a/Trax/Base.lproj/Main.storyboard
+++ b/Trax/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="6cg-Xh-Gvq">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Trax-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="GPXViewController" customModule="Trax" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,6 +19,10 @@
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="BLE-Ko-jFV">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="0Xz-ko-HHq" appends="YES" id="j4T-me-U2o"/>
+                                </connections>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -29,11 +33,65 @@
                             <constraint firstItem="BLE-Ko-jFV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="nRm-ji-W7F"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Trax" id="ecg-mb-an5"/>
                     <connections>
                         <outlet property="mapView" destination="BLE-Ko-jFV" id="iSA-Po-rNJ"/>
+                        <segue destination="cyq-39-qge" kind="show" identifier="Show Image" id="zPY-Nq-XPV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="0Xz-ko-HHq">
+                    <connections>
+                        <action selector="addWaypoint:" destination="BYZ-38-t0r" id="G62-7t-Z8r"/>
+                    </connections>
+                </pongPressGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="1192" y="348"/>
+        </scene>
+        <!--Image View Controller-->
+        <scene sceneID="LyI-6q-j12">
+            <objects>
+                <viewController id="cyq-39-qge" customClass="ImageViewController" customModule="Trax" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9Fm-Rs-rCB"/>
+                        <viewControllerLayoutGuide type="bottom" id="OdN-52-NzP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="364-yK-OSg">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bqv-qq-qoO">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Bqv-qq-qoO" secondAttribute="trailing" id="25Y-zR-cxL"/>
+                            <constraint firstItem="Bqv-qq-qoO" firstAttribute="top" secondItem="364-yK-OSg" secondAttribute="top" id="6wY-mJ-0ln"/>
+                            <constraint firstItem="Bqv-qq-qoO" firstAttribute="leading" secondItem="364-yK-OSg" secondAttribute="leading" id="F3S-K9-2me"/>
+                            <constraint firstItem="Bqv-qq-qoO" firstAttribute="bottom" secondItem="OdN-52-NzP" secondAttribute="top" id="z3X-jx-mzk"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5yn-o4-oBK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1921" y="348"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="N1e-of-cGu">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6cg-Xh-Gvq" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="owv-KV-gBa">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="AW5-9x-wxS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KuU-ag-s2n" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="380" y="348"/>
         </scene>
