--- a/Trax/Base.lproj/Main.storyboard
+++ b/Trax/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                     <connections>
                         <outlet property="mapView" destination="BLE-Ko-jFV" id="iSA-Po-rNJ"/>
                         <segue destination="cyq-39-qge" kind="show" identifier="Show Image" id="zPY-Nq-XPV"/>
-                        <segue destination="75k-j3-lhL" kind="presentation" identifier="Edit Waypoint" id="Tv7-DK-9u4"/>
+                        <segue destination="yxw-4B-bpA" kind="presentation" identifier="Edit Waypoint" id="Tv7-DK-9u4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -63,7 +63,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Hu0-vk-UUI">
-                                <rect key="frame" x="20" y="20" width="560" height="68"/>
+                                <rect key="frame" x="20" y="64" width="560" height="68"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="dMR-Om-G9W">
                                         <rect key="frame" x="0.0" y="0.0" width="560" height="30"/>
@@ -111,6 +111,13 @@
                             <constraint firstAttribute="trailingMargin" secondItem="Hu0-vk-UUI" secondAttribute="trailing" id="wUk-fW-54v"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="WUE-Lc-bt7">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="dzC-Nd-Gp1">
+                            <connections>
+                                <action selector="done:" destination="75k-j3-lhL" id="9Uj-6T-92G"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="infoTextField" destination="9Je-yN-sUY" id="wYk-Zd-LYF"/>
                         <outlet property="nameTextField" destination="KN5-Bu-X8X" id="gMX-yf-9Fn"/>
@@ -118,7 +125,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N0f-oW-pOV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2008" y="-504"/>
+            <point key="canvasLocation" x="2820" y="-504"/>
         </scene>
         <!--Image View Controller-->
         <scene sceneID="LyI-6q-j12">
@@ -166,6 +173,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KuU-ag-s2n" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="380" y="348"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="f1Q-AR-VAH">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="yxw-4B-bpA" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="TrO-e4-5XH">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="75k-j3-lhL" kind="relationship" relationship="rootViewController" id="UY4-JU-t30"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YJP-Wu-MEV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2008" y="-504"/>
         </scene>
     </scenes>
 </document>
